<resources>
    <string name="app_name">UNIKU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notif">Notifikasi</string>
    <string name="detail">Detail Notif</string>

    <string name="content_text">Terwujudnya Fakultas Ilmu Komputer Kuningan sebagai
        fakultas ilmu komputer yang andai,
        unggul dalam penyelenggaraan
        Dharma perguruan tinggi diwilayah jawa barat pada tahun 2023</string>
    <string name="lahir_detail">Berdiri Sejak Tahun 2024</string>
    <string name="prodi_detail"> Teknik Informatika-S1\nSistem Informasi-S1\nManajemen Informatika-D3\nTeknik Sipil-S1\n</string>
    <string name="detail_fasilitas">Kurikulum MBKM\nLaboratorium Terkini dan Lengkap\nBeasiswa</string>
    <string name="visi">VISI</string>
    <string name="spesification">Detail</string>
    <string name="lahir">Lahir</string>
    <string name="prodi">Program Studi</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="my_name">Natanael Ruswandi </string>
    <string name="buy">Detail</string>
    <string name="dummy_value">FKOM UNIKU</string>
    <string name="dummy_photos">6 Photos </string>
    <string name="alamat">Jl. Cut Nyak Dhien No.36A, Cijoho,\nKec. Kuningan, Kabupaten Kuningan,\nJawa Barat 45513, Indonesia</string>
</resources>