<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="?attr/colorPrimary"
            android:elevation="5dp"
            app:titleTextColor="@color/black"
            app:title="About Us"/>

        <FrameLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/fkom" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="16dp"
                android:padding="8dp"
                android:text="6 Photos"
                android:fontFamily="@font/poppins_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="32sp"
            android:text="Universitas Kuningan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:text="@string/visi"
            android:fontFamily="@font/poppins_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/content_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:text="@string/spesification"
            android:fontFamily="@font/poppins_bold"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:text="@string/lahir"
                    android:fontFamily="@font/poppins_medium"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/lahir_detail"
                    android:fontFamily="@font/poppins_medium"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:text="@string/prodi"
                    android:fontFamily="@font/poppins_medium"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/prodi_detail"
                    android:fontFamily="@font/poppins_medium"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fasilitas"
                    android:fontFamily="@font/poppins_medium"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/detail_fasilitas"
                    android:fontFamily="@font/poppins_medium"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:text="Maps"
                    android:fontFamily="@font/poppins_medium"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:text="@string/alamat"
                    android:fontFamily="@font/poppins_medium"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/maps"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:drawableLeft="@drawable/ic_location"
                android:text="Maps"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/telp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                app:cornerRadius="10dp"
                android:text="Telpon"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cirle"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/profile"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/my_name"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@id/cirle"
                android:fontFamily="@font/poppins_bold"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>